--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="text" id="password" placeholder="Enter password again"> 
+                <input type="password" id="password" placeholder="Enter password again"> 
                 <small>Error Message</small>
             </div>
             <div class="form-control">
                 <label for="confirmPassword">Confirm Password</label>
-                <input type="text" id="password2" placeholder="Enter Confirm Password"> 
+                <input type="password" id="password2" placeholder="Enter Confirm Password"> 
                 <small>Error Message</small>
             </div>
             <button>Submit</button>
